API: validate transactions in POST /transaction/raw
fix #829
